--- a/app/views/boards/new.phtml
+++ b/app/views/boards/new.phtml
@@ -8,10 +8,14 @@
 
 <div class="col-md-6 col-md-offset-3">
     <h1>Create boards</h1>
-    <?php echo \Phalcon\Tag::form("boards/create") ?>
+    <?php echo \Phalcon\Tag::form(array("boards/create", "enctype" => "multipart/form-data")) ?>
     <div class="form-group">
         <label for="content">ContentBody</label>
         <?php echo \Phalcon\Tag::textArea(array("content", "rows" => "5", 'class' => 'form-control')) ?>
+    </div>
+    <div class="form-group">
+        <label for="file">Image</label>
+        <input name="image" type="file" class="form-control" id="file">
     </div>
     <?php echo \Phalcon\Tag::submitButton(array("Save", 'class' => 'btn btn-success pull-right')) ?>
     <?php echo \Phalcon\Tag::endForm() ?>
